Deploy de Login para generación de JWT en Azure
